Move Home to Status and Welcome to Start, refs 1940

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1358,84 +1358,84 @@ general.what_is_this=Was ist das?
 #orig#general.yesterday=Yesterday
 general.yesterday=Gestern
 
-#orig#home_tab.computers=Computer(s)
-home_tab.computers=Computer
-#orig#home_tab.files_available=File(s) available
-home_tab.files_available=Datei(en) verf\u00fcgbar
-##home_tab.files_downloads=Download(s)
-##home_tab.files_downloads_active=Download(s) ({0} KB/s)
-##home_tab.files_uploads=Upload(s)
-##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
-#orig#home_tab.folders=Folder(s)
-home_tab.folders=Folder
-#orig#home_tab.in_sync=All folders are synchronized
-home_tab.in_sync=Alle Folder sind synchronisiert
-#orig#home_tab.last_synced=Last synchronized {0}
-home_tab.last_synced=Zuletzt synchronisiert {0}
-#orig#home_tab.local=Local
-home_tab.local=Lokal
-#orig#home_tab.never_synced=Folders never synchronized
-home_tab.never_synced=Folder noch nie synchronisiert
-#orig#home_tab.new_friend_requests=New friend request(s)
-home_tab.new_friend_requests=Neue Freundschafts-Anfragen
-#orig#home_tab.new_invitations=New invitation(s)
-home_tab.new_invitations=Neue Einladung(en)
-##home_tab.new_single_file_offers=New single file offer(s)
-#orig#home_tab.new_warnings=Warning(s)
-home_tab.new_warnings=Warnung(en)
-#orig#home_tab.no_computers=No other computers known
-home_tab.no_computers=Keine anderen Computer bekannt
-#orig#home_tab.no_folders=No folders configured
-home_tab.no_folders=Keine Folder gefunden. Klick "Neuer Folder" um zu starten.
-#orig#home_tab.not_running=Not running
-home_tab.not_running=Deaktiviert
-#orig#home_tab.online_storage.account={0} (change)
-home_tab.online_storage.account={0} (\u00e4ndern)
-#orig#home_tab.online_storage.account.tips=Click to change account details
-home_tab.online_storage.account.tips=Klick um die Anmeldung zu \u00e4ndern
-#orig#home_tab.online_storage.account_connecting={0} connecting...
-home_tab.online_storage.account_connecting={0} verbinde...
-#orig#home_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
-home_tab.online_storage.account_connecting.tips={APPNAME} verbindet sich mit dem Benutzerkonto
-#orig#home_tab.online_storage.account_disabled={0} disabled
-home_tab.online_storage.account_disabled={0} gesperrt
-#orig#home_tab.online_storage.account_disabled.tips=This account has been disabled
-home_tab.online_storage.account_disabled.tips=Dieses Benutzerkonto ist gesperrt
-#orig#home_tab.online_storage.account_not_logged_in={0} logging in...
-home_tab.online_storage.account_not_logged_in={0} melde an...
-#orig#home_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
-home_tab.online_storage.account_not_logged_in.tips={APPNAME} meldet sich beim Benutzerkonto an
-#orig#home_tab.online_storage.no_password=Log in to Online Storage
-home_tab.online_storage.no_password=Beim Online Speicher anmelden
-#orig#home_tab.online_storage.no_password.tips=Click here to enter account password
-home_tab.online_storage.no_password.tips=Klick um das Passwort einzugeben
-#orig#home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
-home_tab.online_storage.not_setup=Benutzerkonto nicht eingerichtet. Jetzt einrichten.
-#orig#home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.not_setup.tips=Klick um das Benutzerkonto einzurichten
-#orig#home_tab.online_storage.title=Account
-home_tab.online_storage.title=Benutzerkonto
-#orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
-home_tab.online_storage.usage=Online Nutzung\: {0} ({1}%)
-##home_tab.status=Status
-#orig#home_tab.sync_eta=Estimated synchronized\: {0}
-home_tab.sync_eta=Voraussichtlich synchronisiert\: {0}
-#orig#home_tab.sync_unknown=Estimated synchronized\: Unknown
-home_tab.sync_unknown=Voraussichtlich synchronisiert\: unbekannt
-#orig#home_tab.synchronizing.0=Synchronization in progress.
-home_tab.synchronizing.0=Synchronisation l\u00e4uft.
-#orig#home_tab.synchronizing.1=Synchronization in progress..
-home_tab.synchronizing.1=Synchronisation l\u00e4uft..
-#orig#home_tab.synchronizing.2=Synchronization in progress...
-home_tab.synchronizing.2=Synchronisation l\u00e4uft...
-#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
-home_tab.tell_friend.text={APPNAME} weiterempfehlen
-#orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
-home_tab.tell_friend.tip=Klick um einem Freund oder Freundin zu {APPNAME} einladen
-#orig#home_tab.total={0} total
-home_tab.total={0} gesamt
-#orig#home_tab.you_have=You have
-home_tab.you_have=Sie haben
+#orig#status_tab.computers=Computer(s)
+status_tab.computers=Computer
+#orig#status_tab.files_available=File(s) available
+status_tab.files_available=Datei(en) verf\u00fcgbar
+##status_tab.files_downloads=Download(s)
+##status_tab.files_downloads_active=Download(s) ({0} KB/s)
+##status_tab.files_uploads=Upload(s)
+##status_tab.files_uploads_active=Upload(s) ({0} KB/s)
+#orig#status_tab.folders=Folder(s)
+status_tab.folders=Folder
+#orig#status_tab.in_sync=All folders are synchronized
+status_tab.in_sync=Alle Folder sind synchronisiert
+#orig#status_tab.last_synced=Last synchronized {0}
+status_tab.last_synced=Zuletzt synchronisiert {0}
+#orig#status_tab.local=Local
+status_tab.local=Lokal
+#orig#status_tab.never_synced=Folders never synchronized
+status_tab.never_synced=Folder noch nie synchronisiert
+#orig#status_tab.new_friend_requests=New friend request(s)
+status_tab.new_friend_requests=Neue Freundschafts-Anfragen
+#orig#status_tab.new_invitations=New invitation(s)
+status_tab.new_invitations=Neue Einladung(en)
+##status_tab.new_single_file_offers=New single file offer(s)
+#orig#status_tab.new_warnings=Warning(s)
+status_tab.new_warnings=Warnung(en)
+#orig#status_tab.no_computers=No other computers known
+status_tab.no_computers=Keine anderen Computer bekannt
+#orig#status_tab.no_folders=No folders configured
+status_tab.no_folders=Keine Folder gefunden. Klick "Neuer Folder" um zu starten.
+#orig#status_tab.not_running=Not running
+status_tab.not_running=Deaktiviert
+#orig#status_tab.online_storage.account={0} (change)
+status_tab.online_storage.account={0} (\u00e4ndern)
+#orig#status_tab.online_storage.account.tips=Click to change account details
+status_tab.online_storage.account.tips=Klick um die Anmeldung zu \u00e4ndern
+#orig#status_tab.online_storage.account_connecting={0} connecting...
+status_tab.online_storage.account_connecting={0} verbinde...
+#orig#status_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
+status_tab.online_storage.account_connecting.tips={APPNAME} verbindet sich mit dem Benutzerkonto
+#orig#status_tab.online_storage.account_disabled={0} disabled
+status_tab.online_storage.account_disabled={0} gesperrt
+#orig#status_tab.online_storage.account_disabled.tips=This account has been disabled
+status_tab.online_storage.account_disabled.tips=Dieses Benutzerkonto ist gesperrt
+#orig#status_tab.online_storage.account_not_logged_in={0} logging in...
+status_tab.online_storage.account_not_logged_in={0} melde an...
+#orig#status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
+status_tab.online_storage.account_not_logged_in.tips={APPNAME} meldet sich beim Benutzerkonto an
+#orig#status_tab.online_storage.no_password=Log in to Online Storage
+status_tab.online_storage.no_password=Beim Online Speicher anmelden
+#orig#status_tab.online_storage.no_password.tips=Click here to enter account password
+status_tab.online_storage.no_password.tips=Klick um das Passwort einzugeben
+#orig#status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
+status_tab.online_storage.not_setup=Benutzerkonto nicht eingerichtet. Jetzt einrichten.
+#orig#status_tab.online_storage.not_setup.tips=Click here to configure account details
+status_tab.online_storage.not_setup.tips=Klick um das Benutzerkonto einzurichten
+#orig#status_tab.online_storage.title=Account
+status_tab.online_storage.title=Benutzerkonto
+#orig#status_tab.online_storage.usage=Online usage\: {0} ({1}%)
+status_tab.online_storage.usage=Online Nutzung\: {0} ({1}%)
+##status_tab.status=Status
+#orig#status_tab.sync_eta=Estimated synchronized\: {0}
+status_tab.sync_eta=Voraussichtlich synchronisiert\: {0}
+#orig#status_tab.sync_unknown=Estimated synchronized\: Unknown
+status_tab.sync_unknown=Voraussichtlich synchronisiert\: unbekannt
+#orig#status_tab.synchronizing.0=Synchronization in progress.
+status_tab.synchronizing.0=Synchronisation l\u00e4uft.
+#orig#status_tab.synchronizing.1=Synchronization in progress..
+status_tab.synchronizing.1=Synchronisation l\u00e4uft..
+#orig#status_tab.synchronizing.2=Synchronization in progress...
+status_tab.synchronizing.2=Synchronisation l\u00e4uft...
+#orig#status_tab.tell_friend.text=Tell someone about {APPNAME}
+status_tab.tell_friend.text={APPNAME} weiterempfehlen
+#orig#status_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
+status_tab.tell_friend.tip=Klick um einem Freund oder Freundin zu {APPNAME} einladen
+#orig#status_tab.total={0} total
+status_tab.total={0} gesamt
+#orig#status_tab.you_have=You have
+status_tab.you_have=Sie haben
 
 #orig#image_file_info.resolution=Resolution
 image_file_info.resolution=Aufl\u00f6sung
@@ -1521,12 +1521,6 @@ main_tabbed_pane.folders.description=Detail der Folder
 main_tabbed_pane.folders.key=F
 #orig#main_tabbed_pane.folders.name=Folders
 main_tabbed_pane.folders.name=Folder
-#orig#main_tabbed_pane.home.description=Over all information about {APPNAME}
-main_tabbed_pane.home.description=Haupt\u00fcbersicht
-#orig#main_tabbed_pane.home.key=H
-main_tabbed_pane.home.key=H
-#orig#main_tabbed_pane.home.name=Home
-main_tabbed_pane.home.name=Home
 
 #orig#member.me=Me
 member.me=Sie
@@ -1901,18 +1895,18 @@ pro.download_csv.name=CSV Export
 pro.filelist_writer.description=Schreibt die Dateiliste als CSV Datei in alle Folder
 #orig#pro.filelist_writer.name=Filelist Writer
 pro.filelist_writer.name=CSV Dateilisten
-#orig#pro.home_tab.disabled=Not running. Activate now
-pro.home_tab.disabled=Deaktiviert. Hier aktivieren.
-#orig#pro.home_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
-pro.home_tab.disabled.tips=Warum ist {APPNAME} derzeit deaktiviert?
-#orig#pro.home_tab.remaining={0} day(s) remaining
-pro.home_tab.remaining={0} Tag(e) \u00fcbrig
-#orig#pro.home_tab.remaining.tips=Your license will expire in {0} days
-pro.home_tab.remaining.tips=Ihre Lizenz wird in {0} auslaufen
-#orig#pro.home_tab.renew_license=Renew {APPNAME}
-pro.home_tab.renew_license=Lizenz verl\u00e4ngern
-#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
-pro.home_tab.upgrade_powerfolder={APPNAME} bestellen
+#orig#pro.status_tab.disabled=Not running. Activate now
+pro.status_tab.disabled=Deaktiviert. Hier aktivieren.
+#orig#pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
+pro.status_tab.disabled.tips=Warum ist {APPNAME} derzeit deaktiviert?
+#orig#pro.status_tab.remaining={0} day(s) remaining
+pro.status_tab.remaining={0} Tag(e) \u00fcbrig
+#orig#pro.status_tab.remaining.tips=Your license will expire in {0} days
+pro.status_tab.remaining.tips=Ihre Lizenz wird in {0} auslaufen
+#orig#pro.status_tab.renew_license=Renew {APPNAME}
+pro.status_tab.renew_license=Lizenz verl\u00e4ngern
+#orig#pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
+pro.status_tab.upgrade_powerfolder={APPNAME} bestellen
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=Verbindungen werden \u00fcber HTTP geschleust
 #orig#pro.http.name=HTTP tunneled connections
