--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1374,81 +1374,81 @@ general.what_is_this=Que es esto?
 #orig#general.yesterday=Yesterday
 general.yesterday=Ayer
 
-#orig#home_tab.computers=Computer(s)
-home_tab.computers=Computadora(s)
-#orig#home_tab.files_available=File(s) available
-home_tab.files_available=Archivo(s) disponible(S)
-##home_tab.files_downloads=Download(s)
-##home_tab.files_downloads_active=Download(s) ({0} KB/s)
-##home_tab.files_uploads=Upload(s)
-##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
-#orig#home_tab.folders=Folder(s)
-home_tab.folders=Carpeta(s)
-#orig#home_tab.in_sync=All folders are synchronized
-home_tab.in_sync=Todas las carpetas est\u00e1n sincronizdas
-#orig#home_tab.last_synced=Last synchronized {0}
-home_tab.last_synced=Ultima en sincronizar {0}
-#orig#home_tab.local=Local
-home_tab.local=Local
-#orig#home_tab.never_synced=Folders never synchronized
-home_tab.never_synced=Carpetas jam\u00e1s sincronizadas
-#orig#home_tab.new_friend_requests=New friend request(s)
-home_tab.new_friend_requests=Pedido(s) de amistad nuevo
-#orig#home_tab.new_invitations=New invitation(s)
-home_tab.new_invitations=Invitacion(es) nueva(s)
-#orig#home_tab.new_single_file_offers=New single file offer(s)
-home_tab.new_single_file_offers=Ofrecimiento(s) de archivo sencillo.
-#orig#home_tab.new_warnings=Warning(s)
-home_tab.new_warnings=Advertencia(s)
-#orig#home_tab.no_computers=No other computers known
-home_tab.no_computers=No hay computadoras conocidas
-#orig#home_tab.no_folders=No folders configured
-home_tab.no_folders=No hay carpetas con configuraci\u00f3n
-#orig#home_tab.not_running=Not running
-home_tab.not_running=No corriendo
-#orig#home_tab.online_storage.account={0} (change)
-home_tab.online_storage.account={0} (alterado)
-#orig#home_tab.online_storage.account.tips=Click to change account details
-home_tab.online_storage.account.tips=Hacer click para cambiar detalles de cuenta
-#orig#home_tab.online_storage.account_connecting={0} connecting...
-home_tab.online_storage.account_connecting={0} conectando...
-#orig#home_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
-home_tab.online_storage.account_connecting.tips={APPNAME} se conecta a esta cuenta
-#orig#home_tab.online_storage.account_disabled={0} disabled
-home_tab.online_storage.account_disabled={0} desactivada
-#orig#home_tab.online_storage.account_disabled.tips=This account has been disabled
-home_tab.online_storage.account_disabled.tips=Esta cuenta ha sido desactivada
-#orig#home_tab.online_storage.account_not_logged_in={0} logging in...
-home_tab.online_storage.account_not_logged_in={0} haciendo un accesso...
-#orig#home_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
-home_tab.online_storage.account_not_logged_in.tips={APPNAME} esta accesando esta cuenta
-#orig#home_tab.online_storage.no_password=Log in to Online Storage
-home_tab.online_storage.no_password=Hacer un acceso al almac\u00e9n en linea
-#orig#home_tab.online_storage.no_password.tips=Click here to enter account password
-home_tab.online_storage.no_password.tips=Hacer un click aqui para poner la contrase\u00f1oa de la cuenta
-#orig#home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
-home_tab.online_storage.not_setup=Todavia sin opciones. Inscribirse y hacer un login aqui.
-#orig#home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.not_setup.tips=Hacer un click aqu\u00ed para configurar detalles de cuenta
-#orig#home_tab.online_storage.title=Account
-home_tab.online_storage.title=Cuenta
-#orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
-home_tab.online_storage.usage=Uso en linea\: {0} ({1}%)
-##home_tab.status=Status
-#orig#home_tab.sync_eta=Estimated synchronized\: {0}
-home_tab.sync_eta=Todas las carpetas ser\u00e1n sincronizadas en {0}
-##home_tab.sync_unknown=Estimated synchronized\: Unknown
-##home_tab.synchronizing.0=Synchronization in progress.
-##home_tab.synchronizing.1=Synchronization in progress..
-##home_tab.synchronizing.2=Synchronization in progress...
-#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
-home_tab.tell_friend.text=Dile a un amigo que usas {APPNAME}
-#orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
-home_tab.tell_friend.tip=Haz un click aqu\u00ed para mandar un correo electr\u00f3nico a tus amigos invit\u00e1ndolos a usar {APPNAME}
-#orig#home_tab.total={0} total
-home_tab.total={0} total
-#orig#home_tab.you_have=You have
-home_tab.you_have=Tu tienes
+#orig#status_tab.computers=Computer(s)
+status_tab.computers=Computadora(s)
+#orig#status_tab.files_available=File(s) available
+status_tab.files_available=Archivo(s) disponible(S)
+##status_tab.files_downloads=Download(s)
+##status_tab.files_downloads_active=Download(s) ({0} KB/s)
+##status_tab.files_uploads=Upload(s)
+##status_tab.files_uploads_active=Upload(s) ({0} KB/s)
+#orig#status_tab.folders=Folder(s)
+status_tab.folders=Carpeta(s)
+#orig#status_tab.in_sync=All folders are synchronized
+status_tab.in_sync=Todas las carpetas est\u00e1n sincronizdas
+#orig#status_tab.last_synced=Last synchronized {0}
+status_tab.last_synced=Ultima en sincronizar {0}
+#orig#status_tab.local=Local
+status_tab.local=Local
+#orig#status_tab.never_synced=Folders never synchronized
+status_tab.never_synced=Carpetas jam\u00e1s sincronizadas
+#orig#status_tab.new_friend_requests=New friend request(s)
+status_tab.new_friend_requests=Pedido(s) de amistad nuevo
+#orig#status_tab.new_invitations=New invitation(s)
+status_tab.new_invitations=Invitacion(es) nueva(s)
+#orig#status_tab.new_single_file_offers=New single file offer(s)
+status_tab.new_single_file_offers=Ofrecimiento(s) de archivo sencillo.
+#orig#status_tab.new_warnings=Warning(s)
+status_tab.new_warnings=Advertencia(s)
+#orig#status_tab.no_computers=No other computers known
+status_tab.no_computers=No hay computadoras conocidas
+#orig#status_tab.no_folders=No folders configured
+status_tab.no_folders=No hay carpetas con configuraci\u00f3n
+#orig#status_tab.not_running=Not running
+status_tab.not_running=No corriendo
+#orig#status_tab.online_storage.account={0} (change)
+status_tab.online_storage.account={0} (alterado)
+#orig#status_tab.online_storage.account.tips=Click to change account details
+status_tab.online_storage.account.tips=Hacer click para cambiar detalles de cuenta
+#orig#status_tab.online_storage.account_connecting={0} connecting...
+status_tab.online_storage.account_connecting={0} conectando...
+#orig#status_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
+status_tab.online_storage.account_connecting.tips={APPNAME} se conecta a esta cuenta
+#orig#status_tab.online_storage.account_disabled={0} disabled
+status_tab.online_storage.account_disabled={0} desactivada
+#orig#status_tab.online_storage.account_disabled.tips=This account has been disabled
+status_tab.online_storage.account_disabled.tips=Esta cuenta ha sido desactivada
+#orig#status_tab.online_storage.account_not_logged_in={0} logging in...
+status_tab.online_storage.account_not_logged_in={0} haciendo un accesso...
+#orig#status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
+status_tab.online_storage.account_not_logged_in.tips={APPNAME} esta accesando esta cuenta
+#orig#status_tab.online_storage.no_password=Log in to Online Storage
+status_tab.online_storage.no_password=Hacer un acceso al almac\u00e9n en linea
+#orig#status_tab.online_storage.no_password.tips=Click here to enter account password
+status_tab.online_storage.no_password.tips=Hacer un click aqui para poner la contrase\u00f1oa de la cuenta
+#orig#status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
+status_tab.online_storage.not_setup=Todavia sin opciones. Inscribirse y hacer un login aqui.
+#orig#status_tab.online_storage.not_setup.tips=Click here to configure account details
+status_tab.online_storage.not_setup.tips=Hacer un click aqu\u00ed para configurar detalles de cuenta
+#orig#status_tab.online_storage.title=Account
+status_tab.online_storage.title=Cuenta
+#orig#status_tab.online_storage.usage=Online usage\: {0} ({1}%)
+status_tab.online_storage.usage=Uso en linea\: {0} ({1}%)
+##status_tab.status=Status
+#orig#status_tab.sync_eta=Estimated synchronized\: {0}
+status_tab.sync_eta=Todas las carpetas ser\u00e1n sincronizadas en {0}
+##status_tab.sync_unknown=Estimated synchronized\: Unknown
+##status_tab.synchronizing.0=Synchronization in progress.
+##status_tab.synchronizing.1=Synchronization in progress..
+##status_tab.synchronizing.2=Synchronization in progress...
+#orig#status_tab.tell_friend.text=Tell someone about {APPNAME}
+status_tab.tell_friend.text=Dile a un amigo que usas {APPNAME}
+#orig#status_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
+status_tab.tell_friend.tip=Haz un click aqu\u00ed para mandar un correo electr\u00f3nico a tus amigos invit\u00e1ndolos a usar {APPNAME}
+#orig#status_tab.total={0} total
+status_tab.total={0} total
+#orig#status_tab.you_have=You have
+status_tab.you_have=Tu tienes
 
 #orig#image_file_info.resolution=Resolution
 image_file_info.resolution=Resoluci\u00f3n
@@ -1534,12 +1534,6 @@ main_tabbed_pane.folders.description=Detalles sobre otras carpetas {APPNAME}
 main_tabbed_pane.folders.key=F
 #orig#main_tabbed_pane.folders.name=Folders
 main_tabbed_pane.folders.name=Carpetas
-#orig#main_tabbed_pane.home.description=Over all information about {APPNAME}
-main_tabbed_pane.home.description=Informaci\u00f3n general sobre {APPNAME}
-#orig#main_tabbed_pane.home.key=H
-main_tabbed_pane.home.key=H
-#orig#main_tabbed_pane.home.name=Home
-main_tabbed_pane.home.name=Home
 
 #orig#member.me=Me
 member.me=Yo
@@ -1934,18 +1928,18 @@ pro.download_csv.name=Descargar como CSV
 pro.filelist_writer.description=Escrive la lista de archivos como archivo CSV en la carpeta
 #orig#pro.filelist_writer.name=Filelist Writer
 pro.filelist_writer.name=Escritor de lista de archivos
-#orig#pro.home_tab.disabled=Not running. Activate now
-pro.home_tab.disabled=No corriendo. Activar ahora
-#orig#pro.home_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
-pro.home_tab.disabled.tips=Hacer click para saber porque {APPNAME} esta desactivado
-#orig#pro.home_tab.remaining={0} day(s) remaining
-pro.home_tab.remaining={0} dia(s) restantes
-#orig#pro.home_tab.remaining.tips=Your license will expire in {0} days
-pro.home_tab.remaining.tips=Su licencia va a expirar en {0} d\u00edas
-#orig#pro.home_tab.renew_license=Renew {APPNAME}
-pro.home_tab.renew_license=Renovar {APPNAME}
-#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
-pro.home_tab.upgrade_powerfolder=Mejorar {APPNAME}
+#orig#pro.status_tab.disabled=Not running. Activate now
+pro.status_tab.disabled=No corriendo. Activar ahora
+#orig#pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
+pro.status_tab.disabled.tips=Hacer click para saber porque {APPNAME} esta desactivado
+#orig#pro.status_tab.remaining={0} day(s) remaining
+pro.status_tab.remaining={0} dia(s) restantes
+#orig#pro.status_tab.remaining.tips=Your license will expire in {0} days
+pro.status_tab.remaining.tips=Su licencia va a expirar en {0} d\u00edas
+#orig#pro.status_tab.renew_license=Renew {APPNAME}
+pro.status_tab.renew_license=Renovar {APPNAME}
+#orig#pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
+pro.status_tab.upgrade_powerfolder=Mejorar {APPNAME}
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=Coneciones HTTP en tunel via HTTP
 #orig#pro.http.name=HTTP tunneled connections
