--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1374,81 +1374,81 @@ general.what_is_this=Cos'\u00e8 questo?
 #orig#general.yesterday=Yesterday
 general.yesterday=ieri
 
-#orig#home_tab.computers=Computer(s)
-home_tab.computers=Computer(s)
-#orig#home_tab.files_available=File(s) available
-home_tab.files_available=File(s) disponibili
-home_tab.files_downloads=Download
-home_tab.files_downloads_active=Download ({0} KB/s)
-home_tab.files_uploads=Upload
-home_tab.files_uploads_active=Upload ({0} KB/s)
-#orig#home_tab.folders=Folder(s)
-home_tab.folders=Cartella(e)
-#orig#home_tab.in_sync=All folders are synchronized
-home_tab.in_sync=Tutte le cartelle sono sincronizzate
-#orig#home_tab.last_synced=Last synchronized {0}
-home_tab.last_synced=Ultima sincronizzata {0}
-#orig#home_tab.local=Local
-home_tab.local=Locale
-#orig#home_tab.never_synced=Folders never synchronized
-home_tab.never_synced=Cartelle mai sincronizzate
-#orig#home_tab.new_friend_requests=New friend request(s)
-home_tab.new_friend_requests=Nuova richiesta(e) amicizia
-#orig#home_tab.new_invitations=New invitation(s)
-home_tab.new_invitations=Nuovo invito(i)
-#orig#home_tab.new_single_file_offers=New single file offer(s)
-home_tab.new_single_file_offers=Nuova offerta(e) singolo file
-#orig#home_tab.new_warnings=Warning(s)
-home_tab.new_warnings=Avviso(i)
-#orig#home_tab.no_computers=No other computers known
-home_tab.no_computers=Nessun altro computer
-#orig#home_tab.no_folders=No folders configured
-home_tab.no_folders=Nessuna cartella configurata
-#orig#home_tab.not_running=Not running
-home_tab.not_running=Non in esecuzione
-#orig#home_tab.online_storage.account={0} (change)
-home_tab.online_storage.account={0} (modifica)
-#orig#home_tab.online_storage.account.tips=Click to change account details
-home_tab.online_storage.account.tips=Clicca per modificare dettagli account
-#orig#home_tab.online_storage.account_connecting={0} connecting...
-home_tab.online_storage.account_connecting={0} connessione in corso...
-#orig#home_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
-home_tab.online_storage.account_connecting.tips=PowerFolder sta connettendosi a questo account
-#orig#home_tab.online_storage.account_disabled={0} disabled
-home_tab.online_storage.account_disabled={0} disabilitato
-#orig#home_tab.online_storage.account_disabled.tips=This account has been disabled
-home_tab.online_storage.account_disabled.tips=Questo account \u00e8 stato disabilitato
-#orig#home_tab.online_storage.account_not_logged_in={0} logging in...
-home_tab.online_storage.account_not_logged_in={0} autenticazione...
-#orig#home_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
-home_tab.online_storage.account_not_logged_in.tips=PowerFolder si sta autentocando in questo account
-#orig#home_tab.online_storage.no_password=Log in to Online Storage
-home_tab.online_storage.no_password=Autenticazione allo Storage Online 
-#orig#home_tab.online_storage.no_password.tips=Click here to enter account password
-home_tab.online_storage.no_password.tips=Clicca qui per inserire password dell'account
-#orig#home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
-home_tab.online_storage.not_setup=Non ancora impostato. Registrati e autenticati qui.
-#orig#home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.not_setup.tips=Clicca qui per configurare dettagli account
-#orig#home_tab.online_storage.title=Account
-home_tab.online_storage.title=Account
-#orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
-home_tab.online_storage.usage=Utilizzo Online\: {0} ({1}%)
-home_tab.status=Stato
-#orig#home_tab.sync_eta=Estimated synchronized\: {0}
-home_tab.sync_eta=Tutte le cartelle saranno sincronizzate {0}
-home_tab.sync_unknown=Sincronizzazione stimata\: Sconosciuta
-home_tab.synchronizing.0=Sincronizzazione in corso.
-home_tab.synchronizing.1=Sincronizzazione in corso..
-home_tab.synchronizing.2=Sincronizzazione in corso...
-#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
-home_tab.tell_friend.text=Segnala PowerFolder ad un amico
-#orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
-home_tab.tell_friend.tip=Clicca qui per inviare un email per invitare amici s PowerFolder
-#orig#home_tab.total={0} total
-home_tab.total={0} totale
-#orig#home_tab.you_have=You have
-home_tab.you_have=Tu hai
+#orig#status_tab.computers=Computer(s)
+status_tab.computers=Computer(s)
+#orig#status_tab.files_available=File(s) available
+status_tab.files_available=File(s) disponibili
+status_tab.files_downloads=Download
+status_tab.files_downloads_active=Download ({0} KB/s)
+status_tab.files_uploads=Upload
+status_tab.files_uploads_active=Upload ({0} KB/s)
+#orig#status_tab.folders=Folder(s)
+status_tab.folders=Cartella(e)
+#orig#status_tab.in_sync=All folders are synchronized
+status_tab.in_sync=Tutte le cartelle sono sincronizzate
+#orig#status_tab.last_synced=Last synchronized {0}
+status_tab.last_synced=Ultima sincronizzata {0}
+#orig#status_tab.local=Local
+status_tab.local=Locale
+#orig#status_tab.never_synced=Folders never synchronized
+status_tab.never_synced=Cartelle mai sincronizzate
+#orig#status_tab.new_friend_requests=New friend request(s)
+status_tab.new_friend_requests=Nuova richiesta(e) amicizia
+#orig#status_tab.new_invitations=New invitation(s)
+status_tab.new_invitations=Nuovo invito(i)
+#orig#status_tab.new_single_file_offers=New single file offer(s)
+status_tab.new_single_file_offers=Nuova offerta(e) singolo file
+#orig#status_tab.new_warnings=Warning(s)
+status_tab.new_warnings=Avviso(i)
+#orig#status_tab.no_computers=No other computers known
+status_tab.no_computers=Nessun altro computer
+#orig#status_tab.no_folders=No folders configured
+status_tab.no_folders=Nessuna cartella configurata
+#orig#status_tab.not_running=Not running
+status_tab.not_running=Non in esecuzione
+#orig#status_tab.online_storage.account={0} (change)
+status_tab.online_storage.account={0} (modifica)
+#orig#status_tab.online_storage.account.tips=Click to change account details
+status_tab.online_storage.account.tips=Clicca per modificare dettagli account
+#orig#status_tab.online_storage.account_connecting={0} connecting...
+status_tab.online_storage.account_connecting={0} connessione in corso...
+#orig#status_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
+status_tab.online_storage.account_connecting.tips=PowerFolder sta connettendosi a questo account
+#orig#status_tab.online_storage.account_disabled={0} disabled
+status_tab.online_storage.account_disabled={0} disabilitato
+#orig#status_tab.online_storage.account_disabled.tips=This account has been disabled
+status_tab.online_storage.account_disabled.tips=Questo account \u00e8 stato disabilitato
+#orig#status_tab.online_storage.account_not_logged_in={0} logging in...
+status_tab.online_storage.account_not_logged_in={0} autenticazione...
+#orig#status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
+status_tab.online_storage.account_not_logged_in.tips=PowerFolder si sta autentocando in questo account
+#orig#status_tab.online_storage.no_password=Log in to Online Storage
+status_tab.online_storage.no_password=Autenticazione allo Storage Online
+#orig#status_tab.online_storage.no_password.tips=Click here to enter account password
+status_tab.online_storage.no_password.tips=Clicca qui per inserire password dell'account
+#orig#status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
+status_tab.online_storage.not_setup=Non ancora impostato. Registrati e autenticati qui.
+#orig#status_tab.online_storage.not_setup.tips=Click here to configure account details
+status_tab.online_storage.not_setup.tips=Clicca qui per configurare dettagli account
+#orig#status_tab.online_storage.title=Account
+status_tab.online_storage.title=Account
+#orig#status_tab.online_storage.usage=Online usage\: {0} ({1}%)
+status_tab.online_storage.usage=Utilizzo Online\: {0} ({1}%)
+status_tab.status=Stato
+#orig#status_tab.sync_eta=Estimated synchronized\: {0}
+status_tab.sync_eta=Tutte le cartelle saranno sincronizzate {0}
+status_tab.sync_unknown=Sincronizzazione stimata\: Sconosciuta
+status_tab.synchronizing.0=Sincronizzazione in corso.
+status_tab.synchronizing.1=Sincronizzazione in corso..
+status_tab.synchronizing.2=Sincronizzazione in corso...
+#orig#status_tab.tell_friend.text=Tell someone about {APPNAME}
+status_tab.tell_friend.text=Segnala PowerFolder ad un amico
+#orig#status_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
+status_tab.tell_friend.tip=Clicca qui per inviare un email per invitare amici s PowerFolder
+#orig#status_tab.total={0} total
+status_tab.total={0} totale
+#orig#status_tab.you_have=You have
+status_tab.you_have=Tu hai
 
 #orig#image_file_info.resolution=Resolution
 image_file_info.resolution=Risoluzione
@@ -1534,12 +1534,6 @@ main_tabbed_pane.folders.description=Dettagli su altre cartelle PowerFolder
 main_tabbed_pane.folders.key=C
 #orig#main_tabbed_pane.folders.name=Folders
 main_tabbed_pane.folders.name=Cartelle
-#orig#main_tabbed_pane.home.description=Over all information about {APPNAME}
-main_tabbed_pane.home.description=Informazioni generali su PowerFolder
-#orig#main_tabbed_pane.home.key=H
-main_tabbed_pane.home.key=H
-#orig#main_tabbed_pane.home.name=Home
-main_tabbed_pane.home.name=Home
 
 #orig#member.me=Me
 member.me=Io
@@ -1934,18 +1928,18 @@ pro.download_csv.name=Scarica come CSV
 pro.filelist_writer.description=Scrive la lista di files come file CSV nella cartella
 #orig#pro.filelist_writer.name=Filelist Writer
 pro.filelist_writer.name=Scrittura Lista dei file
-#orig#pro.home_tab.disabled=Not running. Activate now
-pro.home_tab.disabled=Non in esecuzione. Attiva ora
-#orig#pro.home_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
-pro.home_tab.disabled.tips=Clicca per capire perch\u00e9 PowerFolder \u00e8 attualmente disattivato.
-#orig#pro.home_tab.remaining={0} day(s) remaining
-pro.home_tab.remaining={0} giorno(i) rimanente(i)
-#orig#pro.home_tab.remaining.tips=Your license will expire in {0} days
-pro.home_tab.remaining.tips=La tua licenza finir\u00e0 fra {0} giorni
-#orig#pro.home_tab.renew_license=Renew {APPNAME}
-pro.home_tab.renew_license=Rinnova PowerFolder
-#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
-pro.home_tab.upgrade_powerfolder=Aggiorna PowerFolder
+#orig#pro.status_tab.disabled=Not running. Activate now
+pro.status_tab.disabled=Non in esecuzione. Attiva ora
+#orig#pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
+pro.status_tab.disabled.tips=Clicca per capire perch\u00e9 PowerFolder \u00e8 attualmente disattivato.
+#orig#pro.status_tab.remaining={0} day(s) remaining
+pro.status_tab.remaining={0} giorno(i) rimanente(i)
+#orig#pro.status_tab.remaining.tips=Your license will expire in {0} days
+pro.status_tab.remaining.tips=La tua licenza finir\u00e0 fra {0} giorni
+#orig#pro.status_tab.renew_license=Renew {APPNAME}
+pro.status_tab.renew_license=Rinnova PowerFolder
+#orig#pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
+pro.status_tab.upgrade_powerfolder=Aggiorna PowerFolder
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=Connessione HTTP tunnellizzata HTTP
 #orig#pro.http.name=HTTP tunneled connections
