--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -843,48 +843,48 @@ general.today=idag
 #orig#general.yesterday=Yesterday
 general.yesterday=ig\u00e5r
 
-##home_tab.computers=Computer(s)
-##home_tab.files_available=File(s) available
-##home_tab.files_downloads=Download(s)
-##home_tab.files_downloads_active=Download(s) ({0} KB/s)
-##home_tab.files_uploads=Upload(s)
-##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
-##home_tab.folders=Folder(s)
-##home_tab.in_sync=All folders are synchronized
-##home_tab.last_synced=Last synchronized {0}
-##home_tab.local=Local
-##home_tab.never_synced=Folders never synchronized
-##home_tab.new_friend_requests=New friend request(s)
-##home_tab.new_invitations=New invitation(s)
-##home_tab.new_single_file_offers=New single file offer(s)
-##home_tab.new_warnings=Warning(s)
-##home_tab.no_computers=No other computers known
-##home_tab.no_folders=No folders configured
-##home_tab.not_running=Not running
-##home_tab.online_storage.account={0} (change)
-##home_tab.online_storage.account.tips=Click to change account details
-##home_tab.online_storage.account_connecting={0} connecting...
-##home_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
-##home_tab.online_storage.account_disabled={0} disabled
-##home_tab.online_storage.account_disabled.tips=This account has been disabled
-##home_tab.online_storage.account_not_logged_in={0} logging in...
-##home_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
-##home_tab.online_storage.no_password=Log in to Online Storage
-##home_tab.online_storage.no_password.tips=Click here to enter account password
-##home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
-##home_tab.online_storage.not_setup.tips=Click here to configure account details
-##home_tab.online_storage.title=Account
-##home_tab.online_storage.usage=Online usage\: {0} ({1}%)
-##home_tab.status=Status
-##home_tab.sync_eta=Estimated synchronized\: {0}
-##home_tab.sync_unknown=Estimated synchronized\: Unknown
-##home_tab.synchronizing.0=Synchronization in progress.
-##home_tab.synchronizing.1=Synchronization in progress..
-##home_tab.synchronizing.2=Synchronization in progress...
-##home_tab.tell_friend.text=Tell someone about {APPNAME}
-##home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
-##home_tab.total={0} total
-##home_tab.you_have=You have
+##status_tab.computers=Computer(s)
+##status_tab.files_available=File(s) available
+##status_tab.files_downloads=Download(s)
+##status_tab.files_downloads_active=Download(s) ({0} KB/s)
+##status_tab.files_uploads=Upload(s)
+##status_tab.files_uploads_active=Upload(s) ({0} KB/s)
+##status_tab.folders=Folder(s)
+##status_tab.in_sync=All folders are synchronized
+##status_tab.last_synced=Last synchronized {0}
+##status_tab.local=Local
+##status_tab.never_synced=Folders never synchronized
+##status_tab.new_friend_requests=New friend request(s)
+##status_tab.new_invitations=New invitation(s)
+##status_tab.new_single_file_offers=New single file offer(s)
+##status_tab.new_warnings=Warning(s)
+##status_tab.no_computers=No other computers known
+##status_tab.no_folders=No folders configured
+##status_tab.not_running=Not running
+##status_tab.online_storage.account={0} (change)
+##status_tab.online_storage.account.tips=Click to change account details
+##status_tab.online_storage.account_connecting={0} connecting...
+##status_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
+##status_tab.online_storage.account_disabled={0} disabled
+##status_tab.online_storage.account_disabled.tips=This account has been disabled
+##status_tab.online_storage.account_not_logged_in={0} logging in...
+##status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
+##status_tab.online_storage.no_password=Log in to Online Storage
+##status_tab.online_storage.no_password.tips=Click here to enter account password
+##status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
+##status_tab.online_storage.not_setup.tips=Click here to configure account details
+##status_tab.online_storage.title=Account
+##status_tab.online_storage.usage=Online usage\: {0} ({1}%)
+##status_tab.status=Status
+##status_tab.sync_eta=Estimated synchronized\: {0}
+##status_tab.sync_unknown=Estimated synchronized\: Unknown
+##status_tab.synchronizing.0=Synchronization in progress.
+##status_tab.synchronizing.1=Synchronization in progress..
+##status_tab.synchronizing.2=Synchronization in progress...
+##status_tab.tell_friend.text=Tell someone about {APPNAME}
+##status_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
+##status_tab.total={0} total
+##status_tab.you_have=You have
 
 #orig#image_file_info.resolution=Resolution
 image_file_info.resolution=Uppl\u00f6sning
@@ -1259,12 +1259,12 @@ preferences.dialog.warnningMessage=Varning
 ##pro.download_csv.name=Download as CSV
 ##pro.filelist_writer.description=Writes the filelists as CSV file into the folder
 ##pro.filelist_writer.name=Filelist Writer
-##pro.home_tab.disabled=Not running. Activate now
-##pro.home_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
-##pro.home_tab.remaining={0} day(s) remaining
-##pro.home_tab.remaining.tips=Your license will expire in {0} days
-##pro.home_tab.renew_license=Renew {APPNAME}
-##pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
+##pro.status_tab.disabled=Not running. Activate now
+##pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
+##pro.status_tab.remaining={0} day(s) remaining
+##pro.status_tab.remaining.tips=Your license will expire in {0} days
+##pro.status_tab.renew_license=Renew {APPNAME}
+##pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
 ##pro.http.description=HTTP connections tunneled via HTTP
 ##pro.http.name=HTTP tunneled connections
 ##pro.http.options.directconnect=Direct connection to Internet
