--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1385,85 +1385,85 @@ general.what_is_this=\u8fd9\u662f\u4ec0\u4e48\uff1f
 #orig#general.yesterday=Yesterday
 general.yesterday=\u6628\u5929
 
-#orig#home_tab.computers=Computer(s)
-home_tab.computers=\u8ba1\u7b97\u673a
-#orig#home_tab.files_available=File(s) available
-home_tab.files_available=\u53ef\u7528\u7684\u6587\u4ef6
-#orig#home_tab.files_downloads=Download(s)
-home_tab.files_downloads=\u4e0b\u8f7d
-#orig#home_tab.files_downloads_active=Download(s) ({0} KB/s)
-home_tab.files_downloads_active=\u4e0b\u8f7d ({0} KB/s)
-#orig#home_tab.files_uploads=Upload(s)
-home_tab.files_uploads=\u4e0a\u4f20
-#orig#home_tab.files_uploads_active=Upload(s) ({0} KB/s)
-home_tab.files_uploads_active=\u4e0a\u4f20 ({0} KB/s)
-#orig#home_tab.folders=Folder(s)
-home_tab.folders=\u6587\u4ef6\u5939
-#orig#home_tab.in_sync=All folders are synchronized
-home_tab.in_sync=\u6240\u6709\u7684\u6587\u4ef6\u5939\u90fd\u5df2\u7ecf\u540c\u6b65
-#orig#home_tab.last_synced=Last synchronized {0}
-home_tab.last_synced=\u4e0a\u4e00\u6b21\u540c\u6b65 {0}
-#orig#home_tab.local=Local
-home_tab.local=\u672c\u5730
-#orig#home_tab.never_synced=Folders never synchronized
-home_tab.never_synced=\u4ece\u6765\u6ca1\u6709\u540c\u6b65\u7684\u6587\u4ef6\u5939
-#orig#home_tab.new_friend_requests=New friend request(s)
-home_tab.new_friend_requests=\u65b0\u7684\u597d\u53cb\u8bf7\u6c42
-#orig#home_tab.new_invitations=New invitation(s)
-home_tab.new_invitations=\u65b0\u7684\u9080\u8bf7
-#orig#home_tab.new_single_file_offers=New single file offer(s)
-home_tab.new_single_file_offers=\u63d0\u4f9b\u7684\u65b0\u5355\u4e00\u6587\u4ef6New single file offer(s)
-#orig#home_tab.new_warnings=Warning(s)
-home_tab.new_warnings=\u8b66\u544a
-#orig#home_tab.no_computers=No other computers known
-home_tab.no_computers=\u6ca1\u6709\u53d1\u73b0\u5176\u5b83\u7684\u8ba1\u7b97\u673a
-#orig#home_tab.no_folders=No folders configured
-home_tab.no_folders=\u6ca1\u6709\u914d\u7f6e\u8fc7\u7684\u6587\u4ef6\u5939
-#orig#home_tab.not_running=Not running
-home_tab.not_running=\u4e0d\u5728\u8fd0\u884c\u4e2d
-#orig#home_tab.online_storage.account={0} (change)
-home_tab.online_storage.account={0} (\u66f4\u6539)
-#orig#home_tab.online_storage.account.tips=Click to change account details
-home_tab.online_storage.account.tips=\u70b9\u51fb\u4ee5\u66f4\u6539\u8d26\u6237\u8be6\u60c5
-#orig#home_tab.online_storage.account_connecting={0} connecting...
-home_tab.online_storage.account_connecting={0} \u6b63\u5728\u8fde\u63a5...
-#orig#home_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
-home_tab.online_storage.account_connecting.tips=PowerFolder\u6b63\u5728\u8fde\u63a5\u5230\u8fd9\u4e2a\u8d26\u6237
-#orig#home_tab.online_storage.account_disabled={0} disabled
-home_tab.online_storage.account_disabled={0} \u7981\u7528
-#orig#home_tab.online_storage.account_disabled.tips=This account has been disabled
-home_tab.online_storage.account_disabled.tips=\u8d26\u6237\u5df2\u7ecf\u7981\u7528
-#orig#home_tab.online_storage.account_not_logged_in={0} logging in...
-home_tab.online_storage.account_not_logged_in={0} \u6b63\u5728\u767b\u5f55...
-#orig#home_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
-home_tab.online_storage.account_not_logged_in.tips=PowerFolder\u6b63\u5728\u767b\u5f55\u5230\u8fd9\u4e2a\u8d26\u6237
-#orig#home_tab.online_storage.no_password=Log in to Online Storage
-home_tab.online_storage.no_password=\u767b\u5f55\u5230\u5728\u7ebf\u5b58\u50a8
-#orig#home_tab.online_storage.no_password.tips=Click here to enter account password
-home_tab.online_storage.no_password.tips=\u70b9\u51fb\u8fd9\u91cc\u4ee5\u8f93\u5165\u8d26\u6237\u5bc6\u7801
-#orig#home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
-home_tab.online_storage.not_setup=\u8fd8\u6ca1\u6709\u8bbe\u7f6e\u3002\u6ce8\u518c\u5e76\u5728\u8fd9\u91cc\u767b\u5f55\u3002
-#orig#home_tab.online_storage.not_setup.tips=Click here to configure account details
-home_tab.online_storage.not_setup.tips=\u70b9\u51fb\u8fd9\u91cc\u914d\u7f6e\u8d26\u6237\u8be6\u60c5
-#orig#home_tab.online_storage.title=Account
-home_tab.online_storage.title=\u8d26\u6237
-#orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
-home_tab.online_storage.usage=\u5728\u7ebf\u4f7f\u7528\u7387\: {0} ({1}%)
-home_tab.status=\u72b6\u6001
-#orig#home_tab.sync_eta=Estimated synchronized\: {0}
-home_tab.sync_eta=\u6240\u6709\u5c06\u8981\u540c\u6b65\u7684\u6587\u4ef6\u5939 {0}
-home_tab.sync_unknown=\u4f30\u8ba1\u5df2\u7ecf\u540c\u6b65\: \u672a\u77e5
-home_tab.synchronizing.0=\u6b63\u5728\u8fdb\u884c\u540c\u6b65.
-home_tab.synchronizing.1=\u6b63\u5728\u8fdb\u884c\u540c\u6b65..
-home_tab.synchronizing.2=\u6b63\u5728\u8fdb\u884c\u540c\u6b65...
-#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
-home_tab.tell_friend.text=\u5411\u670b\u53cb\u4ecb\u7ecdPowerFolder
-#orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
-home_tab.tell_friend.tip=\u70b9\u51fb\u8fd9\u91cc\u53d1\u9001\u7535\u5b50\u90ae\u4ef6\u9080\u8bf7\u670b\u53cb\u4f7f\u7528PowerFolder
-#orig#home_tab.total={0} total
-home_tab.total=\u603b\u8ba1{0}
-#orig#home_tab.you_have=You have
-home_tab.you_have=\u4f60\u6709
+#orig#status_tab.computers=Computer(s)
+status_tab.computers=\u8ba1\u7b97\u673a
+#orig#status_tab.files_available=File(s) available
+status_tab.files_available=\u53ef\u7528\u7684\u6587\u4ef6
+#orig#status_tab.files_downloads=Download(s)
+status_tab.files_downloads=\u4e0b\u8f7d
+#orig#status_tab.files_downloads_active=Download(s) ({0} KB/s)
+status_tab.files_downloads_active=\u4e0b\u8f7d ({0} KB/s)
+#orig#status_tab.files_uploads=Upload(s)
+status_tab.files_uploads=\u4e0a\u4f20
+#orig#status_tab.files_uploads_active=Upload(s) ({0} KB/s)
+status_tab.files_uploads_active=\u4e0a\u4f20 ({0} KB/s)
+#orig#status_tab.folders=Folder(s)
+status_tab.folders=\u6587\u4ef6\u5939
+#orig#status_tab.in_sync=All folders are synchronized
+status_tab.in_sync=\u6240\u6709\u7684\u6587\u4ef6\u5939\u90fd\u5df2\u7ecf\u540c\u6b65
+#orig#status_tab.last_synced=Last synchronized {0}
+status_tab.last_synced=\u4e0a\u4e00\u6b21\u540c\u6b65 {0}
+#orig#status_tab.local=Local
+status_tab.local=\u672c\u5730
+#orig#status_tab.never_synced=Folders never synchronized
+status_tab.never_synced=\u4ece\u6765\u6ca1\u6709\u540c\u6b65\u7684\u6587\u4ef6\u5939
+#orig#status_tab.new_friend_requests=New friend request(s)
+status_tab.new_friend_requests=\u65b0\u7684\u597d\u53cb\u8bf7\u6c42
+#orig#status_tab.new_invitations=New invitation(s)
+status_tab.new_invitations=\u65b0\u7684\u9080\u8bf7
+#orig#status_tab.new_single_file_offers=New single file offer(s)
+status_tab.new_single_file_offers=\u63d0\u4f9b\u7684\u65b0\u5355\u4e00\u6587\u4ef6New single file offer(s)
+#orig#status_tab.new_warnings=Warning(s)
+status_tab.new_warnings=\u8b66\u544a
+#orig#status_tab.no_computers=No other computers known
+status_tab.no_computers=\u6ca1\u6709\u53d1\u73b0\u5176\u5b83\u7684\u8ba1\u7b97\u673a
+#orig#status_tab.no_folders=No folders configured
+status_tab.no_folders=\u6ca1\u6709\u914d\u7f6e\u8fc7\u7684\u6587\u4ef6\u5939
+#orig#status_tab.not_running=Not running
+status_tab.not_running=\u4e0d\u5728\u8fd0\u884c\u4e2d
+#orig#status_tab.online_storage.account={0} (change)
+status_tab.online_storage.account={0} (\u66f4\u6539)
+#orig#status_tab.online_storage.account.tips=Click to change account details
+status_tab.online_storage.account.tips=\u70b9\u51fb\u4ee5\u66f4\u6539\u8d26\u6237\u8be6\u60c5
+#orig#status_tab.online_storage.account_connecting={0} connecting...
+status_tab.online_storage.account_connecting={0} \u6b63\u5728\u8fde\u63a5...
+#orig#status_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
+status_tab.online_storage.account_connecting.tips=PowerFolder\u6b63\u5728\u8fde\u63a5\u5230\u8fd9\u4e2a\u8d26\u6237
+#orig#status_tab.online_storage.account_disabled={0} disabled
+status_tab.online_storage.account_disabled={0} \u7981\u7528
+#orig#status_tab.online_storage.account_disabled.tips=This account has been disabled
+status_tab.online_storage.account_disabled.tips=\u8d26\u6237\u5df2\u7ecf\u7981\u7528
+#orig#status_tab.online_storage.account_not_logged_in={0} logging in...
+status_tab.online_storage.account_not_logged_in={0} \u6b63\u5728\u767b\u5f55...
+#orig#status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
+status_tab.online_storage.account_not_logged_in.tips=PowerFolder\u6b63\u5728\u767b\u5f55\u5230\u8fd9\u4e2a\u8d26\u6237
+#orig#status_tab.online_storage.no_password=Log in to Online Storage
+status_tab.online_storage.no_password=\u767b\u5f55\u5230\u5728\u7ebf\u5b58\u50a8
+#orig#status_tab.online_storage.no_password.tips=Click here to enter account password
+status_tab.online_storage.no_password.tips=\u70b9\u51fb\u8fd9\u91cc\u4ee5\u8f93\u5165\u8d26\u6237\u5bc6\u7801
+#orig#status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
+status_tab.online_storage.not_setup=\u8fd8\u6ca1\u6709\u8bbe\u7f6e\u3002\u6ce8\u518c\u5e76\u5728\u8fd9\u91cc\u767b\u5f55\u3002
+#orig#status_tab.online_storage.not_setup.tips=Click here to configure account details
+status_tab.online_storage.not_setup.tips=\u70b9\u51fb\u8fd9\u91cc\u914d\u7f6e\u8d26\u6237\u8be6\u60c5
+#orig#status_tab.online_storage.title=Account
+status_tab.online_storage.title=\u8d26\u6237
+#orig#status_tab.online_storage.usage=Online usage\: {0} ({1}%)
+status_tab.online_storage.usage=\u5728\u7ebf\u4f7f\u7528\u7387\: {0} ({1}%)
+status_tab.status=\u72b6\u6001
+#orig#status_tab.sync_eta=Estimated synchronized\: {0}
+status_tab.sync_eta=\u6240\u6709\u5c06\u8981\u540c\u6b65\u7684\u6587\u4ef6\u5939 {0}
+status_tab.sync_unknown=\u4f30\u8ba1\u5df2\u7ecf\u540c\u6b65\: \u672a\u77e5
+status_tab.synchronizing.0=\u6b63\u5728\u8fdb\u884c\u540c\u6b65.
+status_tab.synchronizing.1=\u6b63\u5728\u8fdb\u884c\u540c\u6b65..
+status_tab.synchronizing.2=\u6b63\u5728\u8fdb\u884c\u540c\u6b65...
+#orig#status_tab.tell_friend.text=Tell someone about {APPNAME}
+status_tab.tell_friend.text=\u5411\u670b\u53cb\u4ecb\u7ecdPowerFolder
+#orig#status_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
+status_tab.tell_friend.tip=\u70b9\u51fb\u8fd9\u91cc\u53d1\u9001\u7535\u5b50\u90ae\u4ef6\u9080\u8bf7\u670b\u53cb\u4f7f\u7528PowerFolder
+#orig#status_tab.total={0} total
+status_tab.total=\u603b\u8ba1{0}
+#orig#status_tab.you_have=You have
+status_tab.you_have=\u4f60\u6709
 
 #orig#image_file_info.resolution=Resolution
 image_file_info.resolution=\u5206\u8fa8\u7387
@@ -1551,12 +1551,6 @@ main_tabbed_pane.folders.description=\u5176\u5b83PowerFolder\u6587\u4ef6\u5939\u
 main_tabbed_pane.folders.key=F
 #orig#main_tabbed_pane.folders.name=Folders
 main_tabbed_pane.folders.name=\u6587\u4ef6\u5939
-#orig#main_tabbed_pane.home.description=Over all information about {APPNAME}
-main_tabbed_pane.home.description=PowerFolder\u7684\u6574\u4f53\u76f8\u5173\u4fe1\u606f
-#orig#main_tabbed_pane.home.key=H
-main_tabbed_pane.home.key=H
-#orig#main_tabbed_pane.home.name=Home
-main_tabbed_pane.home.name=\u4e3b\u754c\u9762
 
 #orig#member.me=Me
 member.me=\u6211
@@ -1961,18 +1955,18 @@ pro.download_csv.name=\u4ee5CSV\u683c\u5f0f\u4e0b\u8f7d
 pro.filelist_writer.description=\u5c06\u6587\u4ef6\u5217\u8868\u4ee5CSV\u683c\u5f0f\u5199\u5165\u6587\u4ef6\u5939
 #orig#pro.filelist_writer.name=Filelist Writer
 pro.filelist_writer.name=\u6587\u4ef6\u5217\u8868\u5199\u5165
-#orig#pro.home_tab.disabled=Not running. Activate now
-pro.home_tab.disabled=\u6ca1\u6709\u8fd0\u884c\u3002\u73b0\u5728\u6fc0\u6d3b
-#orig#pro.home_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
-pro.home_tab.disabled.tips=\u70b9\u51fb\u4e86\u89e3\u4e3a\u4ec0\u4e48\u73b0\u5728PowerFolder\u88ab\u7981\u7528\u3002
-#orig#pro.home_tab.remaining={0} day(s) remaining
-pro.home_tab.remaining=\u5269\u4f59 {0} \u5929
-#orig#pro.home_tab.remaining.tips=Your license will expire in {0} days
-pro.home_tab.remaining.tips=\u4f60\u7684\u6388\u6743\u5c06\u5728 {0} \u540e\u8fc7\u671f
-#orig#pro.home_tab.renew_license=Renew {APPNAME}
-pro.home_tab.renew_license=PowerFolder\u7eed\u8d39
-#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
-pro.home_tab.upgrade_powerfolder=\u5347\u7ea7PowerFolder
+#orig#pro.status_tab.disabled=Not running. Activate now
+pro.status_tab.disabled=\u6ca1\u6709\u8fd0\u884c\u3002\u73b0\u5728\u6fc0\u6d3b
+#orig#pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
+pro.status_tab.disabled.tips=\u70b9\u51fb\u4e86\u89e3\u4e3a\u4ec0\u4e48\u73b0\u5728PowerFolder\u88ab\u7981\u7528\u3002
+#orig#pro.status_tab.remaining={0} day(s) remaining
+pro.status_tab.remaining=\u5269\u4f59 {0} \u5929
+#orig#pro.status_tab.remaining.tips=Your license will expire in {0} days
+pro.status_tab.remaining.tips=\u4f60\u7684\u6388\u6743\u5c06\u5728 {0} \u540e\u8fc7\u671f
+#orig#pro.status_tab.renew_license=Renew {APPNAME}
+pro.status_tab.renew_license=PowerFolder\u7eed\u8d39
+#orig#pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
+pro.status_tab.upgrade_powerfolder=\u5347\u7ea7PowerFolder
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=\u901a\u8fc7HTTP\u96a7\u9053\u8fde\u63a5
 #orig#pro.http.name=HTTP tunneled connections
